# phase2-starter

./: .gitignore  README.md  pyproject.toml  train.py
src/census_pipeline/: __init__.py  artifact.py  data.py  features.py  model.py  split.py
